# JATIC-internal-docs

./: .gitattributes  .gitlab-ci.yml  .markdownlint.json  CONTRIBUTING.md  README.md  _config.yml  mkdocs.yml  pyproject.toml  requirements.txt
.mkdocs/: mkdocs.yml  requirements.txt
archive/: _Agile Development Approach.md  _Design Principles.md  _ai-te-areas.md  _classification.md  _funding.md  _gitlab-org.md  _open-source-commercial.md  _shared-principles.md
archive/acq/: classification.md  ip.md
archive/personas/: README.md
archive/program-strategy/: Classification.md  Contracting and Acquisition.md  Intellectual Property, Open-source, Commercial.md  README.md
docs/: about.md  empty.md  index.md  portfolio.md
docs/about/: contributing.md  index.md
docs/acq/: classification.md  contracting.md  funding.md  index.md  ip.md
docs/calendar/: inc3.md  inc4.md  inc5.md
docs/contributing/: index.md
docs/dev-process/: agile-principles.md  common-platforms.md  index.md  program-events.md  roles.md  team-events.md
docs/docs/: index.md
docs/guidance/: naming.md  open-source.md
docs/guidelines/: classification.md  naming.md  open-source.md
docs/home/: products.md
docs/increment/: 3.md  4.md  5.md  calendar.md  event-notes.md  index.md  mural.md
docs/info/: capability-overview.md  design-principles.md  problem-statement.md
docs/javascripts/: repo-card.js
docs/org-chart/: aria.md  ibm.md  kitware.md  mitll.md  morse.md  msqs.md  pm.md  systems.md  twosix.md
docs/teams/: pm.md  (+10 more)
overrides/: portfolio.html
public/: 404.html  index.html  sitemap.xml
(+161 files in other folders)
